--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
       - ota-network
 
   mongo:
-    image: mongo:6.0
+    image: mongo
     container_name: ota-backend-mongo-1
     ports:
       - "27017:27017"
